[gd_scene load_steps=11 format=2]

[ext_resource path="res://grafika/itemy/seekingBullet.png" type="Texture" id=1]
[ext_resource path="res://skrypty/magicBullet3.gd" type="Script" id=2]
[ext_resource path="res://grafika/animation/bulletDestruction3.png" type="Texture" id=3]
[ext_resource path="res://grafika/animation/bulletDestruction1.png" type="Texture" id=4]
[ext_resource path="res://grafika/animation/bulletDestruction2.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 8 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4.5, 1 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Pocisk:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "destroyAnimation"
length = 0.2
step = 0.02
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "destroyAfterAnimation"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pocisk:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.06, 0.14 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pocisk:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.827451, 0, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 119.5, 74 )

[node name="BulletSeeking" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="Pocisk" type="Sprite" parent="."]
self_modulate = Color( 0.827451, 0, 1, 1 )
position = Vector2( -2, 0 )
texture = ExtResource( 1 )

[node name="Area2D_attack" type="Area2D" parent="."]
position = Vector2( -14, 1 )
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_attack"]
position = Vector2( 14, -1 )
shape = SubResource( 1 )

[node name="Area2D_terrain" type="Area2D" parent="."]
position = Vector2( -48, -21 )
collision_layer = 16
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_terrain"]
position = Vector2( 51.5, 21 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/destroyAnimation = SubResource( 6 )

[node name="Area2D_trigger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_trigger"]
position = Vector2( 20.5, 2 )
shape = SubResource( 7 )

[node name="TimerD" type="Timer" parent="."]

[connection signal="area_entered" from="Area2D_attack" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D_terrain" to="." method="_on_Area2D_terrain_body_entered"]
[connection signal="area_entered" from="Area2D_trigger" to="." method="_on_Area2D_trigger_area_entered"]
[connection signal="area_exited" from="Area2D_trigger" to="." method="_on_Area2D_trigger_area_exited"]
